css/index_style_new_1.css
/* ... */
.selected_bttn a {
    text-decoration:none;
    color:#000;
}
.active_bttn {
    background-image:url(../images/gray_bg.gif);
    border:#a4a4a4 1px solid;
    font-size:14px;
    background-repeat:repeat-x;
    font-weight:bold;
    width:126px;
    min-height:18px;
    color:#000;
    padding:10px 10px 10px 10px;
    margin-top:5px;
    background-position:bottom;
}
.active_bttn a {
    text-decoration:none;
    color:#5f5f5f;
}
.active_bttn a:hover {
    font-size:16px;
    color:#000;
}
#body #body_center_col {
    float:left;
    width:541px;
    border:#e4e4e4 1px solid;
    margin-left:10px;
}
#body #body_center_col #body_center_contents {
    padding:10px;
}
#body #body_center_col #body_center_contents #content_left_col {
    float:left;
}
#body #body_center_col #body_center_contents #content_center_col {
    float:left;
    width:410px;
}
#body #body_center_col #body_center_contents #content_center_col #apitaizar_text a {
    font-size:16px;
    font-weight:bold;
    color:#017012; /*color:#e15b00;*/
    padding:0px 0px 0px 10px;
    text-decoration:none;
}
#body #body_center_col #body_center_contents #content_center_col #des_text {
    font-size:11px;
    color:#808080;
    padding:2px 0px 0px 10px;
}
#body #body_center_col #body_center_contents #content_right_col {
    float:right;
}
#body #body_center_col #body_center_contents #content_right_col #plus_img {
    float:right;
}
#body #body_center_col #body_center_contents #content_right_col #price {
    font-size:14px;
    font-weight:bold;
    color:#a1a1a1;
    float:right;
    padding:2px 5px 0px 0px;
}
.heading {
    background-image:url(../images/top_gray_bg.gif);
    height:32px;
    border:#e4e4e4 1px solid;
    font-size:18px;
    font-weight:bold;
    color:#5f5f5f;
    text-align:left;
    padding:6px 0px 0px 6px;
}
#body #body_right_col {
    float:left;
    width:271px;
    margin-left:10px;
}
#body #body_right_col #your_summery {
    background-image:url(../images/top_gray_bg.gif);
    height:32px;
    border:#e4e4e4 1px solid;
    font-size:18px;
    font-weight:bold;
    color:#5f5f5f;
    text-align:center;
    padding:6px 0px 0px 0px;
}
#body #body_right_col #contents {
    border-left:#e4e4e4 1px solid;
    border-right:#e4e4e4 1px solid;
    border-bottom:#e4e4e4 1px solid;
}
.flip {
    background-color:#f4f4f4;
    border-bottom:#e4e4e4 1px solid;
}
.flip #counting {
    color:#888888;
    font-size:11px;
    padding:8px 0px 10px 5px;
    float:left;
    width:170px;
}
.flip #minus_sign {
    float:right;
    padding:8px 6px 0px 0px;
}
.flip #dollor {
    float:right;
    padding:9px 10px 0px 0px;
    font-size:11px;
    color:#888888;
}
.flip #plus_sign {
    float:right;
    padding:8px 10px 0px 0px;
}
.flip #edit_sign {
    float:left;
    padding:8px 0px 0px 5px;
}
#body #body_right_col #contents .subtotal {
    font-size:11px;
    color:#888888;
    padding:10px 10px 0px 31px;
    float:left;
}
#body #body_right_col #contents .amount {
    font-size:11px;
    color:#888888;
    padding:10px 30px 0px 0px;
    float:right;
}
.vertical_line {
    background-color:#e4e4e4;
    margin:20px 0px 20px 0px;
    height:1px;
}
#body #body_right_col #contents .online_ordering {
    padding:0px 0px 20px 7px;
}
#footer {
    width:982px;
    margin:20px auto 30px auto;
    border-top:#e4e4e4 1px solid;
    padding:15px 0px 0px 0px;
}
.footer_Logo_Left {
}
.footer_Text_Left {
    font-size:10px;
    margin:3px 0px 0px 0px;
}
#footer .footer_text {
    font-size:10px;
    color:#929292;
    text-align:center;
}
#body_left_col {
}
.username {
    font-size:12px;
    color:#808080;
    padding:16px 0px 0px 20px;
    float:left;
}
.username_text_bar {
    float:right;
    padding:13px 20px 0px 0px;
}
.username_text_bar input {
    width:180px;
}
.forget {
    font-size:12px;
    color:#808080;
    padding:16px 20px 0px 0px;
    float:right;
}
.forget a {
    text-decoration:underline;
    color:#e35c00;
}
.bttn {
    float:right;
    margin:10px 20px 10px 0px;
}
/*listing css*/
#body #body_heading {
    font-size:18px;
    font-weight:bold;
    color:#333333;
    padding:0px 0px 6px 10px;
}
.text_12px {
    font-size:12px;
    color:#808080;
    padding:0px 0px 10px 10px;
}
#body .top_headings {
    background-image:url(../images/top_gray_bg.gif);
    background-repeat:repeat-x;
    height:38px;
    border:#e4e4e4 1px solid;
    font-size:14px;
    color:#5f5f5f;
    font-weight:bold;
}
.font_14px {
    font-size:14px;
    font-weight:bold;
    color:#5f5f5f;
    padding:10px 0px 0px 10px;
    float:left;
}
.item {
    width:180px;
}
.des {
    width:480px;
}
.qty {
    width:55px;
}
.each {
    width:70px;
}
.total {
    width:70px;
}
#items_bg {
    border:#e4e4e4 1px solid;
}
#description_area:nth-child(odd)  {
    background-color:#ffffff;
}
#description_area:nth-child(even) {
    background-color:#f4f4f4;
}

.items {
    width:180px;
}
.description {
    width:480px;
}
.qtys {
    width:55px;
}
.eachs {
    width:70px;
}
.totals {
    width:70px;
}
.color_black {
    font-size:12px;
    color:#000;
    padding:6px 0px 6px 10px;
    float:left;
}
#counting_area {
    float:right;
    width:200px;
    margin-top:5px;
    margin-bottom:10px;
}
#counting_area #counting_left_col {
    float:left;
    width:130px;
}
#counting_area #counting_left_col ul {
    margin:0px;
    padding:0px;
    list-style-type:none;
    font-size:12px;
    font-weight:bold;
}
#counting_area #counting_left_col ul li {
    margin:0px;
    padding:5px 0px 0px 0px;
}
#counting_area #counting_right_col {
    float:left;
}
#counting_area #counting_right_col ul {
    margin:0px;
    padding:0px 0px 0px 0px;
    list-style-type:none;
    font-size:12px;
}
#counting_area #counting_right_col ul li {
    margin:0px;
    padding:5px 0px 0px 0px;
}
.back_color {
    background-color:#f4f4f4;
}
.right_contents {
    float:right;
    width:235px;
}
.font_12px_bold {
    font-weight:bold;
    font-size:12px;
    color:#888888;
}
/* ... */

